--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.5",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-apple-emojis": "^2.2.2",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "sass": "^1.80.4"
