--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "^18.3.1",
         "react-apple-emojis": "^2.2.2",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.3.0",
         "sass": "^1.80.4"
     },
     "devDependencies": {
